fix: wrapping on smaller devices

--- a/src/output.scss
+++ b/src/output.scss
@@ -741,6 +741,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
